--- a/content.css
+++ b/content.css
@@ -140,6 +140,8 @@
 .grepfox-options {
   display: flex !important;
   align-items: center !important;
+  gap: 16px !important;
+  flex-wrap: wrap !important;
 }
 
 .grepfox-checkbox-container {
